public class Main {
  public static void main(String[] args) {
      SurveySystem surveySystem = new SurveySystem();
      surveySystem.execute();
  }
}